Fixed Safari Bug: Search field not showing in map

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -12,7 +12,7 @@
   }
 
   .mapboxgl-canvas {
-    position: relative !important;
+    position: static !important;
   }
 
   .mapboxgl-ctrl-geocoder {
